--- a/EICODA-UI/styles.css
+++ b/EICODA-UI/styles.css
@@ -16,7 +16,7 @@ body {
   
   .container {
     display: flex;
-    height: calc(100vh - 70px); /* Adjust based on navbar height */
+    height: calc(100vh - 70px);
   }
   
   .column {
@@ -68,12 +68,12 @@ body {
   
   #editorContainer {
     flex: 1;
-    height: calc(100% - 3em); /* Adjust based on button bar height and margin */
+    height: calc(100% - 3em);
     display: none;
   }
   
   .editor-container {
-    height: 300px; /* Adjust height as needed */
+    height: 300px;
     margin-bottom: 1em;
     border: 1px solid #ddd;
   }
@@ -103,26 +103,25 @@ body {
     white-space: pre-wrap;
   }
   
-  /* Modal styles */
   .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
   }
   
   .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
   }
   
   .close {
